# toyshop

./: CLAUDE.md  README.md  pyproject.toml  references.toml
.toyshop/: architecture.db
tests/: conftest.py  run_change_e2e.py  run_complete_e2e.py  run_full_e2e.py  run_java_tdd_e2e.py  run_modfactory_bootstrap_e2e.py  run_modfactory_create_mod_e2e.py  run_modify_e2e.py  run_phased_e2e.py  run_ref_source_e2e.py  run_self_host_e2e.py  run_smart_bootstrap_e2e.py  run_tdd_e2e.py  run_tdd_stress.py  test_agent.py  test_agent_e2e.py  test_architecture_guard.py  test_command_runner.py  test_deadlock_e2e.py  test_deadlock_live_e2e.py  test_decision_engine.py  test_decomposer.py  test_llm_e2e.py  test_llm_gateway_adapter.py  test_mc_scaffold.py  test_mc_test_env.py  test_multi_project_type_e2e.py  test_openspec.py  test_pipeline_legacy_spec_path.py  test_pm_evidence_chain.py  test_pm_graph.py  test_pm_phased.py  test_pm_phased_flow_e2e.py  test_pm_phased_live_e2e.py  test_pm_refs.py  test_project_type.py  test_reference.py  test_reporting_adapter.py  test_research_agent.py  test_self_host.py  (+8 more)
toyshop/: __init__.py  agent.py  architecture_guard.py  bridge.py  coding_agent.py  command_runner.py  debug_hypothesis.py  debug_probe.py  decision_engine.py  decomposer.py  expected_comparison.py  fault_localize.py  impact.py  llm.py  llm_gateway.py  mc_scaffold.py  mc_test_env.py  openspec_bridge.py  pipeline.py  pm.py  pm_cli.py  project_type.py  prompt_context.py  reference.py  research_agent.py  rollback.py  self_host.py  smart_bootstrap.py  snapshot.py  spec_evolution.py  ux_agent.py  (+3 more)
(+52 files in other folders)
